# wrap-shell

./: .gitignore  .gitmodules  LICENSE.md  README.md  build.py  install.py  meson.build
src/: wrap-shell.c
